<resources>
    <string name="app_name">Bread4All</string>
    <string name="label">Correo</string>
    <string name="ic_email">Email</string>
    <string name="ic_clave">Contraseña</string>
    <string name="Button_logear">Iniciar sesión</string>
    <string name="title_historial">Historial</string>
    <string name="title_metodo_pago">Metodo de pago</string>
    <string name="title_ayuda">Ayuda</string>
    <string name="header_nombre">Usuario</string>
    <string name="header_correo">Correo</string>
    <string name="title_top_bar">Menu</string>
    <string name="Button_Registrarse">Registrarse</string>
    <string name="ic_nombre">Nombre</string>
    <string name="txtRegistro">Registrarse</string>
    <string name="ic_telefono">Telefono</string>
    <string name="ic_fecha">Fecha de nacimiento</string>
    <string name="suffix_fecha">dd/mm/yyyy</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="navigation_drawer_open">Abierto</string>
    <string name="navigation_drawer_close">Cerrado</string>
    <string name="title_pgweb">Pagina web</string>
    <string name="title_preferencias">Preferencias</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="Moneda">Moneda</string>
    <string name="titulo_moneda">Tu moneda actual</string>
    <string name="Saldo_base">Saldo: 24</string>
    <string name="Apariencia">Apariencia</string>
    <string name="Modo_oscuro">Modo oscuro</string>
    <string name="ProductoTop">El mejor producto</string>
    <string name="SMS">SMS</string>
    <string name="Añadir">Añadir</string>
    <string name="opinion">Segun nuestra opinion</string>
    <string name="Salir">Salir</string>
    <string name="Notificacion">Crear aviso</string>
    <string name="lista_de_recientes">Lista de recientes</string>
    <string name="historial_llamadas">Historial de llamadas</string>
    <string name="Descripccion_generica">Un delicioso pan que le encantara probar</string>
    <string name="Multimedia">Comentarios multimedia</string>
    <string name="Subir_imagen">Subir imagen</string>
    <string name="Subir_audio">Subir audio</string>
    <string name="Subir">Subir</string>
    <string name="Subir_video">Subir video</string>
    <string name="Tomar_foto">Tomar foto</string>
    <string name="Grabar_video">Grabar video</string>
    <string name="Descripcion">Descripción</string>
    <string name="Opinion">Segun nuestra opinion</string>
    <string name="Duda">Duda</string>
    <string name="Introduzca">Introduzca su duda</string>
    <string name="Entrada">Entrada</string>
    <string name="Salida">Salida</string>
    <string name="Perdida">Perdida</string>
    <string name="Trabajando">Estamos trabajando en aumentar el saldo</string>
    <string name="pregunta">¿Desea salir de la aplicación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="pregNoti">¿Desea crear la notificacion?</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="notificacion">Compre su pan más adelante</string>
    <string name="subido">Comentario subido</string>
    <string name="deshacer">Deshacer</string>
    <string name="mapa">Mapa</string>
    <string name="cloud_map_id" translatable="false">31e01dd2eac2e465</string>
    <string name="localizar">Localizar</string>
    <string name="hibrido">Modo hibrido</string>
</resources>