<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TopAppBar">
    <item
        android:id="@+id/historial"
        android:icon="@drawable/ic_historial"
        android:title="@string/title_historial"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/acerca_de"
        android:icon="@drawable/ic_ayuda"
        android:title="@string/title_metodo_pago"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ayuda"
        android:icon="@drawable/ic_email"
        android:title="@string/title_ayuda"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/pgweb"
        android:icon="@drawable/ic_pgweb"
        android:title="@string/title_pgweb"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/SMS"
        android:title="@string/SMS"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/Preferencias"
        android:title="@string/title_preferencias"
        app:showAsAction="ifRoom"/>

</menu>