<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogearActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="295dp"
        android:layout_height="56dp"
        android:layout_marginTop="324dp"
        android:hint="@string/label"
        android:textColorHint="#FDFCFC"
        app:boxBackgroundColor="@color/material_on_surface_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/ic_email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldClave"
        android:layout_width="295dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:hint="@string/ic_clave"
        android:textColorHint="#FFFFFF"
        app:boxBackgroundColor="@color/material_on_surface_stroke"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
        app:startIconContentDescription="@string/ic_clave"
        app:startIconDrawable="@drawable/ic_clave">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/ButtonLogear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#7B1FA2"
        android:onClick="LanzarInicio"
        android:text="@string/Button_logear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldClave"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/ButtonRegistrarse"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:onClick="LanzarRegistrarse"
        android:text="@string/Button_Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ButtonLogear"
        app:layout_constraintTop_toBottomOf="@+id/textFieldClave"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="253dp"
        android:layout_height="119dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFieldEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

</androidx.constraintlayout.widget.ConstraintLayout>