<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtContenidoDescripcion"
        android:layout_width="142dp"
        android:layout_height="170dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/Descripccion_generica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripccion" />

    <RadioButton
        android:id="@+id/radioButtonDerecha"
        android:layout_width="34dp"
        android:layout_height="38dp"
        android:layout_marginStart="44dp"
        android:checked="false"
        android:onClick="botonDerecho"
        app:layout_constraintBottom_toBottomOf="@+id/radioButtonIzq"
        app:layout_constraintStart_toEndOf="@+id/radioButtonIzq"
        app:layout_constraintTop_toTopOf="@+id/radioButtonIzq"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtPrecio"
        android:layout_width="78dp"
        android:layout_height="33dp"
        android:layout_marginStart="4dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/txtNombre"
        app:layout_constraintStart_toEndOf="@+id/txtNombre"
        app:layout_constraintTop_toTopOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="148dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="76dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtDescripccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="DESCRIPCCION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <RadioButton
        android:id="@+id/radioButtonIzq"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="80dp"
        android:onClick="botonIzquierdo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="201dp"
        android:layout_height="142dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewComentarios"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="44dp"
        android:text="@string/Multimedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContenidoDescripcion" />

    <ImageView
        android:id="@+id/imageViewComentarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComentarios"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subir_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
        app:layout_constraintTop_toTopOf="@+id/imageViewComentarios" />

    <Button
        android:id="@+id/buttonAudio"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="@string/Subir_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/imageViewComentarios"
        app:layout_constraintTop_toBottomOf="@+id/buttonFoto" />

</androidx.constraintlayout.widget.ConstraintLayout>